--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "webpack-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.35.0",
     "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "lodas": "^1.2.0",
+    "lodash": "^4.17.21"
   }
 }
